--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,21 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+.ReactModal__Overlay {
+  background-color: #4b5563ad !important;
+}
+.ReactModal__Content {
+  position: absolute  !important;
+  inset: 50% auto auto 50%  !important;
+  border: 2px solid rgb(255, 255, 255)  !important;
+  background: rgb(255, 255, 255)  !important;
+  overflow: auto  !important;
+  border-radius: 13px  !important;
+  outline: none  !important;
+  padding: 20px  !important;
+  margin-right: -50%  !important;
+  transform: translate(-50%, -50%)  !important;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -38,11 +52,9 @@
 }
 .printable {
   display: none;
- 
 }
 .nonPrintable {
   display: block;
-
 }
 @media print {
   .printable {
@@ -53,7 +65,7 @@
     background: #fff;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   }
-  .nonPrintable{
+  .nonPrintable {
     display: none;
   }
   body {
@@ -84,7 +96,8 @@
     margin-bottom: 10px;
   }
 
-  th, td {
+  th,
+  td {
     border: 1px solid #ddd;
     padding: 8px;
     text-align: left;
@@ -93,5 +106,4 @@
   th {
     background-color: #f2f2f2;
   }
-
 }
